Fixes #6639 - add styling for FF2 which does not use border-collapse: collapse
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@14064 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/grid/resources/nihiloGrid.css
+++ b/grid/resources/nihiloGrid.css
@@ -171,6 +171,10 @@
 	border-collapse: collapse;
 }
 
+.dj_ff2 .nihilo .dojoxGrid-row-table {
+	border-collapse: separate;
+}
+
 .nihilo .dojoxGrid-invisible {
 	visibility: hidden;
 }		
@@ -195,6 +199,11 @@
 	padding: 3px 3px 3px 3px;
 	text-align: left;
 	overflow: hidden;
+}
+
+.dj_ff2 .nihilo .dojoxGrid-cell {
+	border-left-width: 0px;
+	border-top-width: 0px;
 }
 
 .dj_ie6 .nihilo .dojoxGrid-cell {
