--- a/grid/resources/tundraGrid.css
+++ b/grid/resources/tundraGrid.css
@@ -165,6 +165,10 @@
 	border-collapse: collapse;
 }
 
+.dj_ff2 .tundra .dojoxGrid-row-table {
+	border-collapse: separate;
+}
+
 .tundra .dojoxGrid-invisible {
 	visibility: hidden;
 }		
@@ -189,6 +193,11 @@
 	padding: 3px 3px 3px 3px;
 	text-align: left;
 	overflow: hidden;
+}
+
+.dj_ff2 .tundra .dojoxGrid-cell {
+	border-left-width: 0px;
+	border-top-width: 0px;
 }
 
 .dj_ie6 .tundra .dojoxGrid-cell {
